--- a/Primeiras tags/index.html
+++ b/Primeiras tags/index.html
@@ -17,7 +17,7 @@
     <h2 id="Introdução">Introdução</h2>
     <p>Bem-vindo ao nosso site dedicado aos <strong>amantes de carros</strong>! Aqui você encontrará informações sobre diversos modelos, dicas de manutenção e as últimas notícias do mundo automobilístico.</p>
     <h3 id="modelomes">Modelo do mês: Ferrari F8 Tributo</h3>
-    <img src="https://s2-autoesporte.glbimg.com/HT3WzpA8-5iGgiUkwarqnojUirM=/0x0:620x413/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2020/8/g/Sux9niQ3AYKbeLGaHiAg/2019-02-28-ferrari-f8-tributo-2020-1600-01.jpg" width="500"/>
+    <img  id="img" src="https://s2-autoesporte.glbimg.com/HT3WzpA8-5iGgiUkwarqnojUirM=/0x0:620x413/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2020/8/g/Sux9niQ3AYKbeLGaHiAg/2019-02-28-ferrari-f8-tributo-2020-1600-01.jpg" width="500"/>
     <p>Ferrari F8 Tributo é um dos carros mais potentes e rápidos da atualidade. Conheça suas especificações e detalhes abaixo.</p>
     <h4>Especificações</h4>
         <ul>
