conteudo do site

--- a/Projeto Resident Evil Wiki/index.html
+++ b/Projeto Resident Evil Wiki/index.html
@@ -22,12 +22,83 @@
             <div class="sidebar">
                 <h2>Conteúdo</h2>
                 <ul>
-                    <li><a href="#">Links</a></li>
+                    <li><a href="#introducao">Introdução</a></li>
+                    <li><a href="#jogos">Jogos</a></li>
+                    <li><a href="#">Personagens</a></li>
+                    <li><a href="#">Animações</a></li>
+                    <li><a href="#">Filmes</a></li>
                 </ul>
             </div>
 
             <div class="main">
-                <h1>Resident evil</h1>
+                <h1 id="introducao">Resident evil</h1>
+                <p><strong>Resident Evil</strong>, conhecido como <em>Biohazard</em> no Japão, é uma franquia de mídia japonesa de propriedade da Capcom. A franquia incorpora uma série de jogos de survival horror, filmes, quadrinhos, romances e outros produtos licenciados. O primeiro jogo da série foi lançado em 1996, e desde então, Resident Evil se tornou uma das séries de jogos mais vendidas de todos os tempos. A história principal gira em torno de surtos de zumbis e outras criaturas causados por armas biológicas criadas pela sinistra corporação Umbrella.
+                </p>
+                <figure>
+                    <img src="assets/images/imagem-principal.jpg" alt="personagens do game resident evil" style="width:100%">
+                </figure>
+                <h2 id="jogos">Jogos</h2>
+                <article>
+                    <h3>Resident Evil (1996)</h3>
+                    <p>
+                        O primeiro jogo da série, Resident Evil, introduz os personagens Chris Redfield e Jill Valentine, membros da equipe tática de elite S.T.A.R.S., que investigam uma série de assassinatos bizarros nos arredores de Raccoon City. Eles se encontram presos em uma mansão infestada por zumbis e outras criaturas, descobrindo que a Umbrella Corporation é a responsável pelos experimentos biológicos que causaram o surto.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 2 (1998)</h3>
+                    <p>
+                        Ambientado dois meses após o primeiro jogo, Resident Evil 2 segue Leon S. Kennedy, um policial novato, e Claire Redfield, irmã de Chris, enquanto tentam escapar de Raccoon City durante um surto de zumbis. O jogo revela mais sobre os experimentos da Umbrella Corporation e apresenta novos personagens e inimigos.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 3: Nemesis (1999)</h3>
+                    <p>
+                        Neste jogo, os jogadores controlam Jill Valentine enquanto ela tenta escapar de Raccoon City durante o mesmo surto de Resident Evil 2. O jogo introduz o Nemesis, uma criatura implacável criada pela Umbrella Corporation para eliminar os membros da S.T.A.R.S.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil Code: Veronica (2000)</h3>
+                    <p>
+                        Este jogo segue Claire Redfield em sua busca pelo irmão Chris, levando-a a uma prisão na ilha Rockfort e depois à Antártica, onde ela descobre mais sobre os experimentos da Umbrella Corporation. Eventualmente, Chris se junta à batalha para salvar sua irmã.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil Zero (2002)</h3>
+                    <p>
+                        Um prequel do primeiro jogo, Resident Evil Zero, segue Rebecca Chambers, uma nova recruta da S.T.A.R.S., e Billy Coen, um ex-militar condenado à morte. Eles investigam um trem infectado por um novo tipo de arma biológica, levando aos eventos do primeiro jogo.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 4 (2005)</h3>
+                    <p>
+                        Leon S. Kennedy retorna como protagonista, agora um agente do governo encarregado de resgatar a filha do presidente dos EUA, que foi sequestrada por um culto na Espanha. O jogo introduz um novo tipo de inimigo, os Ganados, e trouxe uma mudança significativa na jogabilidade, focando mais na ação.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 5 (2009)</h3>
+                    <p>
+                        Chris Redfield e sua nova parceira, Sheva Alomar, investigam um surto bioterrorista na África. Eles descobrem que a Umbrella Corporation e outras organizações continuaram os experimentos biológicos. O jogo é conhecido por seu modo cooperativo.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 6 (2012)</h3>
+                    <p>
+                        O jogo apresenta múltiplas campanhas entrelaçadas, seguindo personagens como Leon S. Kennedy, Chris Redfield, Ada Wong e Jake Muller. Eles lutam contra uma nova ameaça bioterrorista global, enfrentando zumbis e outras criaturas mutantes.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil 7: Biohazard (2017)</h3>
+                    <p>
+                        Este jogo marca um retorno ao survival horror em primeira pessoa. Os jogadores controlam Ethan Winters, que está procurando sua esposa desaparecida, Mia, em uma mansão assombrada na Louisiana. Ele enfrenta a família Baker, que está infectada por um novo tipo de arma biológica.
+                    </p>
+                </article>
+                <article>
+                    <h3>Resident Evil Village (2021)</h3>
+                    <p>
+                        Uma continuação direta de Resident Evil 7, Ethan Winters retorna como protagonista, agora em busca de sua filha raptada. Ele explora uma vila misteriosa cheia de inimigos sobrenaturais, incluindo vampiros e lobisomens. O jogo combina elementos de ação e horror.
+                    </p>
+                </article>
+    
             </div>
 
             <div class="anchors">
