--- a/Projeto Resident Evil Wiki/index.html
+++ b/Projeto Resident Evil Wiki/index.html
@@ -24,9 +24,8 @@
                 <ul>
                     <li><a href="#introducao">Introdução</a></li>
                     <li><a href="#jogos">Jogos</a></li>
-                    <li><a href="#">Personagens</a></li>
-                    <li><a href="#">Animações</a></li>
-                    <li><a href="#">Filmes</a></li>
+                    <li><a href="#personagens">Personagens</a></li>
+                    <li><a href="#animacoes">Animações</a></li>
                 </ul>
             </div>
 
@@ -98,6 +97,28 @@
                         Uma continuação direta de Resident Evil 7, Ethan Winters retorna como protagonista, agora em busca de sua filha raptada. Ele explora uma vila misteriosa cheia de inimigos sobrenaturais, incluindo vampiros e lobisomens. O jogo combina elementos de ação e horror.
                     </p>
                 </article>
+                <h2 id="personagens">Personagens</h2>
+                <table>
+                    <tr>
+                        <th>Chris Redfield</th>
+                        <th>Jill Valentine</th>
+                        <th>Leon Scott Kennedy</th>
+                        <th>Claire Redfield</th>
+                    </tr>
+                    <tr>
+                        <td><img src="assets/images/chris.png" alt="personagem Chris da serie de games resident evil"></td>
+                        <td><img src="assets/images/jill.png" alt="personagem Jill da serie de games resident evil"></td>
+                        <td><img src="assets/images/leon.png" alt="personagem Leon da serie de games resident evil"></td>
+                        <td><img src="assets/images/claire.png" alt="personagem Claire da serie de games resident evil"></td>
+                    </tr>
+                    <tr>
+                        <td>Chris Redfield é um membro fundador da equipe S.T.A.R.S. e mais tarde se torna um dos principais agentes da BSAA. Ele é conhecido por sua força, habilidades de combate e determinação em combater ameaças bioterroristas.</td>
+                        <td>Jill Valentine é uma ex-oficial da S.T.A.R.S. e uma das protagonistas da série Resident Evil. Ela é uma especialista em desarmar bombas e é conhecida por sua inteligência e habilidades de sobrevivência.</td>
+                        <td>Leon S. Kennedy começou como um policial novato em Raccoon City e se tornou um agente especial do governo dos EUA. Ele é um dos personagens mais populares da série, conhecido por seu senso de justiça e habilidade em combate.</td>
+                        <td>Claire Redfield é a irmã de Chris Redfield e uma das protagonistas da série. Ela é uma estudante universitária que se torna uma ativista, lutando contra as corporações que produzem armas biológicas.</td>
+                    </tr>
+                    
+                </table>
     
             </div>
 
