--- a/Projeto Resident Evil Wiki/index.html
+++ b/Projeto Resident Evil Wiki/index.html
@@ -11,7 +11,7 @@
     <header>
         <div>   
             <div class="logo">
-                <img src="assets/images/logo1.png" width="200"/>
+                <img src="assets/images/logo1.png" width="200" alt="logotipo do resident evil wiki"/>
             </div>
         </div>
 
@@ -175,8 +175,17 @@
             </div>
     </div>
     </main>
-    <div class="footer">
+    <footer>
+        <div class="footer">
+        <h3 style="text-align: center;">Links Úteis</h3>
+                <ul id="links" style="text-align: center; color: blue;">
+                    <li><a href="https://www.capcom.com">Capcom</a></li>
+                    <li><a href="https://residentevil.fandom.com">Resident Evil Wiki</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Resident_Evil">Wikipédia - Resident Evil</a></li>
+                </ul>
+                <p style="text-align: center;">&copy; 2024 Resident Evil. Todos os direitos reservados.</p>
 
-    </div>
+        </div>
+    </footer>
 </body>
 </html>
